--- a/css/guru.css
+++ b/css/guru.css
@@ -30,3 +30,45 @@
 .teacher tr th{
     font-size:15px;
 }
+.modal-create-teacher{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0,0,0,0.5);
+}
+.modal-create-teacher-content{
+    background-color: #fff;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 15px;
+
+}
+.modal-create-teacher-content-header{
+    display: flex;
+    justify-content: space-between;
+}
+.modal-create-teacher-content-header span{
+    font-size: xx-large;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.modal-create-teacher-content-header span:hover{
+    color: red;
+    transition: all 0.5s ease;
+}
+.create-teacher input[type="text"],
+.create-teacher input[type="date"],
+.create-teacher select,
+.create-teacher input[type="email"]{
+    padding: 10px;
+    width: 100%;
+    border: none;
+    outline: none;
+    background-color: #12312312;
+}
+.create-teacher select{
+    width: 110%;
+}
