--- a/css/siswa.css
+++ b/css/siswa.css
@@ -1,21 +1,21 @@
-.content-teacher-body-header{
+.content-student-body-header{
     display: flex;
     justify-content:space-between;
 }
-.content-teacher-body-header-button{
+.content-student-body-header-button{
     margin-top: 20px;
 }
-.content-teacher-body-header-button button{
+.content-student-body-header-button button{
     background-color: lightgreen;
 }
-.teacher tr td:last-child button:first-child{
+.student tr td:last-child button:first-child{
     background-color: yellow;
 }
-.teacher tr td:last-child button:last-child{
+.student tr td:last-child button:last-child{
     background-color: red;
     color:#fff;
 }
-.content-teacher-body{
+.content-student-body{
     background-color: #fff;
     padding: 50px;
     margin-top: 10px;
@@ -23,14 +23,15 @@
     height: 400px;
     overflow:scroll;
 }
-.content-teacher-footer{
+.content-student-footer{
     text-align:center;
 }
-.teacher tr td,
-.teacher tr th{
+.student tr td,
+.student tr th{
     font-size:15px;
+    padding-right: 12px;
 }
-.modal-create-teacher{
+.modal-create-student{
     position: fixed;
     left: 0;
     top: 0;
@@ -41,32 +42,32 @@
     display: none;
     overflow: auto;
 }
-.modal-create-teacher-content{
+.modal-create-student-content{
     background-color: #fff;
     padding: 10px;
     margin: 10px;
     border-radius: 15px;
 
 }
-.modal-create-teacher-content-header{
+.modal-create-student-content-header{
     display: flex;
     justify-content: space-between;
 }
-.modal-create-teacher-content-header span{
+.modal-create-student-content-header span{
     font-size: xx-large;
     font-weight: bolder;
     cursor: pointer;
 }
-.modal-create-teacher-content-header span:hover{
+.modal-create-student-content-header span:hover{
     color: red;
     transition: all 0.5s ease;
 }
 
-.modal-create-teacher-footer button{
+.modal-create-student-footer button{
     background-color:lightgreen;
     width:100%;
 }
-.modal-edit-teacher{
+.modal-edit-student{
     position: fixed;
     left: 0;
     top: 0;
@@ -76,60 +77,60 @@
     background-color: rgba(0,0,0,0.5);
     display: none;
 }
-.modal-edit-teacher-content{
+.modal-edit-student-content{
     background-color: #fff;
     padding: 10px;
     margin: 10px;
     border-radius: 15px;
 
 }
-.modal-edit-teacher-content-header{
+.modal-edit-student-content-header{
     display: flex;
     justify-content: space-between;
 }
-.modal-edit-teacher-content-header span{
+.modal-edit-student-content-header span{
     font-size: xx-large;
     font-weight: bolder;
     cursor: pointer;
 }
-.modal-edit-teacher-content-header span:hover{
+.modal-edit-student-content-header span:hover{
     color: red;
     transition: all 0.5s ease;
 }
-.edit-teacher input[type="text"],
-.edit-teacher input[type="date"],
-.edit-teacher select,
-.edit-teacher input[type="email"]{
+.edit-student input[type="text"],
+.edit-student input[type="date"],
+.edit-student select,
+.edit-student input[type="email"]{
     padding: 10px;
     width: 100%;
     border: none;
     outline: none;
     background-color: #12312312;
 }
-.edit-teacher select{
+.edit-student select{
     width: 110%;
 }
-.modal-edit-teacher-footer{
+.modal-edit-student-footer{
     margin-top:15px;
 }
-.modal-edit-teacher-footer button{
+.modal-edit-student-footer button{
     background-color:yellow;
     width:100%;
 }
-.edit-teacher input[type="text"],.edit-teacher input[type="email"]{
+.edit-student input[type="text"],.edit-student input[type="email"]{
     width: 600%;
 }
-.edit-teacher input[type="date"]{
+.edit-student input[type="date"]{
     width: 600%;
 }
-.edit-teacher select{
+.edit-student select{
     width: 610%;
 }
 .message td{
     color: red;
     font-weight: bolder;
 }
-.create-teacher li{
+.create-student li{
     display: flex;
 }
 .form-body{
