--- a/css/kelas.css
+++ b/css/kelas.css
@@ -75,7 +75,7 @@
     height: 100%;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0,0,0,0.5);
-    /* display: none; */
+    display: none;
 }
 .modal-edit-class-content{
     background-color: #fff;
