--- a/css/homepage-teacher.css
+++ b/css/homepage-teacher.css
@@ -158,3 +158,40 @@ body{
 .content-body-content-materi-header-button{
     margin-top: 35px;
 }
+.modal-create-tugas{
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgb(0,0,0);
+    background-color:rgba(0, 0, 0, 0.5);
+}
+.modal-create-tugas-content{
+    background-color: #fff;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+.modal-create-tugas-content-header{
+    display: flex;
+    justify-content: space-between;
+}
+.modal-create-tugas-content-header span{
+    font-size: xx-large;
+    font-weight: bolder;
+    cursor:pointer;
+}
+.modal-create-tugas-content-header span:hover{
+    color:red;
+    transition: all 0.5s ease;
+}
+.modal-create-tugas-content-footer button{
+    width: 100%;
+    padding: 10px;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    background-color: lightgreen;
+}
