--- a/css/homepage-teacher.css
+++ b/css/homepage-teacher.css
@@ -167,6 +167,7 @@ body{
     overflow:auto;
     background-color:rgb(0,0,0);
     background-color:rgba(0, 0, 0, 0.5);
+    display: none;
 }
 .modal-create-tugas-content{
     background-color: #fff;
